; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/zer09/extr_tap_dance.c_dance_uply_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/zer09/extr_tap_dance.c_dance_uply_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@upltap_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@_BL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dance_uply_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @upltap_state, i32 0, i32 0), align 4
  switch i32 %5, label %8 [
    i32 128, label %6
    i32 129, label %7
  ]

6:                                                ; preds = %2
  br label %11

7:                                                ; preds = %2
  br label %8

8:                                                ; preds = %2, %7
  %9 = load i32, i32* @_BL, align 4
  %10 = call i32 @layer_switcher_tap(i32 %9)
  br label %11

11:                                               ; preds = %8, %6
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @upltap_state, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @layer_switcher_tap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
